Fixed z-index for notifications

--- a/src/Inc.TeamAssistant.WebUI/Features/Dialogs/ContentDialog.razor.css
+++ b/src/Inc.TeamAssistant.WebUI/Features/Dialogs/ContentDialog.razor.css
@@ -21,7 +21,6 @@
     transform: translate(-50%, -50%);
     background-color: #9d9d9d;
     box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    z-index: 1001;
 }
 .content-dialog__header {
     display: flex;
