--- a/src/Inc.TeamAssistant.WebUI/Features/Layouts/MainNavbar.razor.css
+++ b/src/Inc.TeamAssistant.WebUI/Features/Layouts/MainNavbar.razor.css
@@ -1,6 +1,5 @@
 .navbar {
     background: rgba(0, 0, 0, .3);
-    z-index: 999;
     position: relative;
     height: 70px;
 }
